tests/algorithms/x/C/web_programming/crawl_google_scholar_citation.c
// Generated by Mochi 0.10.32 on 2025-08-24 09:44 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>


size_t append_len;
static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

typedef struct { const char **keys; const char **vals; size_t len; size_t cap; } MapSS;

static const char* map_get_ss(const char *keys[], const char *vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return "";
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

const char* DIGITS = "0123456789";

long long is_digit(const char* ch);
long long find_substring(const char* haystack, const char* needle);
const char* extract_citation(const char* html);
const char* get_citation(const char* base_url, MapSS params);
int main(void);

long long is_digit(const char* ch) {
    long long i = 0LL;
    while (i < strlen(DIGITS)) {
        if (strcmp((const char[]){DIGITS[i], 0}, ch) == 0) {
            return 1LL;
        }
        i = i + 1LL;
    }
    return 0LL;
}

long long find_substring(const char* haystack, const char* needle) {
    long long i = 0LL;
    while (i <= (strlen(haystack) - strlen(needle))) {
        long long j = 0LL;
        while (j < strlen(needle)) {
            if (strcmp((const char[]){haystack[i + j], 0}, (const char[]){needle[j], 0}) != 0) {
                break;
            }
            j = j + 1LL;
        }
        if (j == strlen(needle)) {
            return i;
        }
        i = i + 1LL;
    }
    return -1LL;
}

const char* extract_citation(const char* html) {
    const char* marker = "Cited by ";
    long long idx = find_substring(html, marker);
    if (idx < 0LL) {
        return "";
    }
    long long pos = idx + strlen(marker);
    const char* result = "";
    while (pos < strlen(html)) {
        const char* ch = (const char[]){html[pos], 0};
        if (!(is_digit(ch))) {
            break;
        }
        result = str_concat(result, ch);
        pos = pos + 1LL;
    }
    return result;
}

const char* get_citation(const char* base_url, MapSS params) {
    const char* html = "<div class=\"gs_ri\"><div class=\"gs_fl\"><a>Cited by 123</a></div></div>";
    return extract_citation(html);
}

int main(void) {
    {
        long long __start = _now();
        if (__name__ == "__main__") {
            static const char* params_keys[22] = {"title", "journal", "volume", "pages", "year", "hl"};
            static const char* params_vals[22] = {"Precisely geometry controlled microsupercapacitors for ultrahigh areal capacitance, volumetric capacitance, and energy density", "Chem. Mater.", "30", "3979-3990", "2018", "en"};
            size_t params_len = 6;
            MapSS params = { params_keys, params_vals, 6, 22 };
            puts(get_citation("https://scholar.google.com/scholar_lookup", params));
        }
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
